--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 62,
    "metadata": {
     "scrolled": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -115,54 +115,58 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>eu 🤝 comer pringles com danette\\n\\n   combinaç...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@englantinez pipoca, bolinha de amendoim ou ba...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>chorando e comendo pringles</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>leticia podendo me viciar em tanta coisa me vi...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>vontade de uma pringles ughhhhh</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         Treinamento  Classificação\n",
-       "0  eu 🤝 comer pringles com danette\\n\\n   combinaç...              1\n",
-       "1  @englantinez pipoca, bolinha de amendoim ou ba...              1\n",
-       "2                        chorando e comendo pringles              0\n",
-       "3  leticia podendo me viciar em tanta coisa me vi...              1\n",
-       "4                    vontade de uma pringles ughhhhh              0"
+       "                                         Treinamento Classificação\n",
+       "0  eu 🤝 comer pringles com danette\\n\\n   combinaç...     Relevante\n",
+       "1  @englantinez pipoca, bolinha de amendoim ou ba...     Relevante\n",
+       "2                        chorando e comendo pringles   Irrelevante\n",
+       "3  leticia podendo me viciar em tanta coisa me vi...     Relevante\n",
+       "4                    vontade de uma pringles ughhhhh   Irrelevante"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_excel(filename)\n",
+    "train = pd.read_excel(filename, sheet_name = 'Treinamento')\n",
+    "\n",
+    "train.Classificação = train.Classificação.astype('category')\n",
+    "train.Classificação.cat.categories = (['Irrelevante', 'Relevante'])\n",
+    "\n",
     "train.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -194,48 +198,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>o cara tem um pote de pringles entre as perna ...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ellixquintx a pringles de cebola maior que ca...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Irrelevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>se eu fosse líder eu n ia falar com a pessoa q...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>vou fazer meu vício favorito dos últimos tempo...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ai to muito puta namoral ja era a minha coca c...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Relevante</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               Teste  Classificação\n",
-       "0  o cara tem um pote de pringles entre as perna ...              0\n",
-       "1  @ellixquintx a pringles de cebola maior que ca...              0\n",
-       "2  se eu fosse líder eu n ia falar com a pessoa q...              1\n",
-       "3  vou fazer meu vício favorito dos últimos tempo...              1\n",
-       "4  ai to muito puta namoral ja era a minha coca c...              1"
+       "                                               Teste Classificação\n",
+       "0  o cara tem um pote de pringles entre as perna ...   Irrelevante\n",
+       "1  @ellixquintx a pringles de cebola maior que ca...   Irrelevante\n",
+       "2  se eu fosse líder eu n ia falar com a pessoa q...     Relevante\n",
+       "3  vou fazer meu vício favorito dos últimos tempo...     Relevante\n",
+       "4  ai to muito puta namoral ja era a minha coca c...     Relevante"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test = pd.read_excel(filename, sheet_name = 'Teste')\n",
+    "\n",
+    "test.Classificação = test.Classificação.astype('category')\n",
+    "test.Classificação.cat.categories = (['Irrelevante', 'Relevante'])\n",
+    "\n",
     "test.head(5)"
    ]
   },
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,20 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "# separando a tabela de treinamento em relevante e irrelevante\n",
     "\n",
-    "train_i = train.loc[train.Classificação==0,:]\n",
+    "train_i = train.loc[train.Classificação==\"Irrelevante\",:]\n",
     "\n",
-    "train_r = train.loc[train.Classificação==1,:]"
+    "train_r = train.loc[train.Classificação==\"Relevante\",:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,38 +396,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cridando um DataFrame para o maquina preencher\n",
     "\n",
-    "data = {'Frase':  [],\n",
+    "data = {'Tweet':  [],\n",
     "        'Classificação': [],\n",
     "    }\n",
     "\n",
-    "novo = pd.DataFrame(data, columns = ['Frase','Classificação'])"
+    "novo = pd.DataFrame(data, columns = ['Tweet','Classificação'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Legenda: T == Tweet\n",
     "\n",
     "contador = 0\n",
-    "for i in l_teste:\n",
+    "for frase in l_teste:\n",
     "    probTDadoR = 1\n",
-    "    for j in i:\n",
-    "        if j in tab_rel_a:\n",
-    "            probTDadoR*=(tab_rel_r[j])\n",
+    "    for palavra in frase:\n",
+    "        if palavra in tab_rel_a:\n",
+    "            probTDadoR*=(tab_rel_r[palavra])\n",
     "            \n",
     "    probTDadoI = 1\n",
-    "    for j in i:\n",
-    "        if j in tab_irr_a:\n",
-    "            probTDadoI*=(tab_irr_r[j])\n",
+    "    for palavra in frase:\n",
+    "        if palavra in tab_irr_a:\n",
+    "            probTDadoI*=(tab_irr_r[palavra])\n",
     "            \n",
     "    probRdadoT = probTDadoR*probR\n",
     "    \n",
@@ -427,13 +435,13 @@
     "\n",
     "    if probRdadoT>probIdadoT:\n",
     "        \n",
-    "        novo.loc[contador,\"Frase\"]= \" \".join(i)\n",
-    "        novo.loc[novo.Frase==\" \".join(i),\"Classificação\"] = \"Relevante\"\n",
+    "        novo.loc[contador,\"Tweet\"]= \" \".join(frase)\n",
+    "        novo.loc[novo.Tweet==\" \".join(frase),\"Classificação\"] = \"Relevante\"\n",
     "    \n",
     "    elif probRdadoT<probIdadoT:\n",
     "        \n",
-    "        novo.loc[contador,\"Frase\"]=\" \".join(i)\n",
-    "        novo.loc[novo.Frase==\" \".join(i),\"Classificação\"] = \"Irrelevante\"\n",
+    "        novo.loc[contador,\"Tweet\"]=\" \".join(frase)\n",
+    "        novo.loc[novo.Tweet==\" \".join(frase),\"Classificação\"] = \"Irrelevante\"\n",
     "    \n",
     "    contador+=1"
    ]
@@ -447,8 +455,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
+   "execution_count": 130,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -480,11 +490,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>Irrelevante</th>\n",
        "      <td>142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>Relevante</th>\n",
        "      <td>58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -494,11 +504,11 @@
       "text/plain": [
        "               Teste\n",
        "Classificação       \n",
-       "0                142\n",
-       "1                 58"
+       "Irrelevante      142\n",
+       "Relevante         58"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,8 +519,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
+   "execution_count": 131,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -533,7 +545,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Frase</th>\n",
+       "      <th>Tweet</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Classificação</th>\n",
@@ -554,13 +566,13 @@
        "</div>"
       ],
       "text/plain": [
-       "               Frase\n",
+       "               Tweet\n",
        "Classificação       \n",
        "Irrelevante       72\n",
        "Relevante        128"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,6 +580,13 @@
    "source": [
     "novo.groupby(['Classificação']).count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -663,13 +682,6 @@
     "\n",
     "[A practical explanation of a Naive Bayes Classifier](https://monkeylearn.com/blog/practical-explanation-naive-bayes-classifier/) **Mais simples**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
