--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4                    vontade de uma pringles ughhhhh   Irrelevante"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "4  ai to muito puta namoral ja era a minha coca c...     Relevante"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
     "import re \n",
     "\n",
     "def cleanup(text):\n",
-    "    punctuation = '[!-.:?;¿]' \n",
+    "    punctuation = '[\\|/!-.:?;,)(\"]' \n",
     "    pattern = re.compile(punctuation)\n",
     "    text_subbed = re.sub(pattern, '', text)\n",
     "    return text_subbed"
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "palavras_unicas_total=[]\n",
+    "for i in l_t:\n",
+    "    if i not in palavras_unicas_total:\n",
+    "        palavras_unicas_total.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,13 +435,20 @@
     "for frase in l_teste:\n",
     "    probTDadoR = 1\n",
     "    for palavra in frase:\n",
+    "        # Laplace smoothing\n",
     "        if palavra in tab_rel_a:\n",
-    "            probTDadoR*=(tab_rel_r[palavra])\n",
+    "            probTDadoR*=(tab_rel_a[palavra] + 1) / (len(tab_rel) + len(palavras_unicas_total))\n",
+    "        else:\n",
+    "            probTDadoR*=(0+1) / (len(tab_rel) + len(palavras_unicas_total))\n",
+    "            \n",
     "            \n",
     "    probTDadoI = 1\n",
     "    for palavra in frase:\n",
+    "        # Laplace smoothing\n",
     "        if palavra in tab_irr_a:\n",
-    "            probTDadoI*=(tab_irr_r[palavra])\n",
+    "            probTDadoI*=(tab_irr_a[palavra] + 1) / (len(tab_irr) + len(palavras_unicas_total))\n",
+    "        else:\n",
+    "            probTDadoI*=(0 + 1) / (len(tab_irr) + len(palavras_unicas_total))\n",
     "            \n",
     "    probRdadoT = probTDadoR*probR\n",
     "    \n",
@@ -455,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
@@ -508,7 +529,7 @@
        "Relevante         58"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -555,11 +576,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Irrelevante</th>\n",
-       "      <td>72</td>\n",
+       "      <td>138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Relevante</th>\n",
-       "      <td>128</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -568,11 +589,11 @@
       "text/plain": [
        "               Tweet\n",
        "Classificação       \n",
-       "Irrelevante       72\n",
-       "Relevante        128"
+       "Irrelevante      138\n",
+       "Relevante         62"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,13 +601,6 @@
    "source": [
     "novo.groupby(['Classificação']).count()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
