--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import re "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 349,
    "metadata": {
     "scrolled": false
    },
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "4                    vontade de uma pringles ughhhhh   Irrelevante"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -220,20 +221,110 @@
        "      <td>ai to muito puta namoral ja era a minha coca c...</td>\n",
        "      <td>Relevante</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>parece que os pringles que eu gosto não são ma...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>inexplicável o tanto que a stax pisa na pringles</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>tem umas foto de ontem q eu to segurando uma l...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>@marcuseduardop1 kkkkkkk só o caderno msm, que...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>@_mfitas_ na receita das pringles a batata dev...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>a minha mae: queres que faça uma tarte de fran...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>@emersoncruzm @jokacn @luizcrvg5 @aubrey7l @aq...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>fui ao mercado daqui e fiquei 😲 pq a pringles ...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>@hi_pringles for regular album? 🤩🤩🤩</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>incrível que eu taco o fodase pra coisa doce l...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>@cmlndrd ontem eu andei levantei minha bunda 2...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>kkkkkkkkkkkkkk os cara fazem pure de batata co...</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>minha festa seria da @pringles</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>meus planos eram: assistir dorama, comer minha...</td>\n",
+       "      <td>Irrelevante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>pringles é ruim</td>\n",
+       "      <td>Relevante</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               Teste Classificação\n",
-       "0  o cara tem um pote de pringles entre as perna ...   Irrelevante\n",
-       "1  @ellixquintx a pringles de cebola maior que ca...   Irrelevante\n",
-       "2  se eu fosse líder eu n ia falar com a pessoa q...     Relevante\n",
-       "3  vou fazer meu vício favorito dos últimos tempo...     Relevante\n",
-       "4  ai to muito puta namoral ja era a minha coca c...     Relevante"
+       "                                                Teste Classificação\n",
+       "0   o cara tem um pote de pringles entre as perna ...   Irrelevante\n",
+       "1   @ellixquintx a pringles de cebola maior que ca...   Irrelevante\n",
+       "2   se eu fosse líder eu n ia falar com a pessoa q...     Relevante\n",
+       "3   vou fazer meu vício favorito dos últimos tempo...     Relevante\n",
+       "4   ai to muito puta namoral ja era a minha coca c...     Relevante\n",
+       "5   parece que os pringles que eu gosto não são ma...   Irrelevante\n",
+       "6    inexplicável o tanto que a stax pisa na pringles   Irrelevante\n",
+       "7   tem umas foto de ontem q eu to segurando uma l...   Irrelevante\n",
+       "8   @marcuseduardop1 kkkkkkk só o caderno msm, que...   Irrelevante\n",
+       "9   @_mfitas_ na receita das pringles a batata dev...   Irrelevante\n",
+       "10  a minha mae: queres que faça uma tarte de fran...   Irrelevante\n",
+       "11  @emersoncruzm @jokacn @luizcrvg5 @aubrey7l @aq...     Relevante\n",
+       "12  fui ao mercado daqui e fiquei 😲 pq a pringles ...     Relevante\n",
+       "13                @hi_pringles for regular album? 🤩🤩🤩   Irrelevante\n",
+       "14  incrível que eu taco o fodase pra coisa doce l...     Relevante\n",
+       "15  @cmlndrd ontem eu andei levantei minha bunda 2...     Relevante\n",
+       "16  kkkkkkkkkkkkkk os cara fazem pure de batata co...     Relevante\n",
+       "17                     minha festa seria da @pringles   Irrelevante\n",
+       "18  meus planos eram: assistir dorama, comer minha...   Irrelevante\n",
+       "19                                    pringles é ruim     Relevante"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,24 +372,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
     "# funcao para limpar o texto de pontuacoes\n",
     "\n",
-    "import re \n",
-    "\n",
     "def cleanup(text):\n",
-    "    punctuation = '[\\|/!-.:?;,)(\"]' \n",
+    "    punctuation = '[|/!-.:?;¿,)(\"]'\n",
     "    pattern = re.compile(punctuation)\n",
     "    text_subbed = re.sub(pattern, '', text)\n",
-    "    return text_subbed"
+    "    return limpandinho(limpa_aspas(text_subbed))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funcao para tirar aspas\n",
+    "\n",
+    "def limpa_aspas(text):\n",
+    "    lista=[\"'\", '\"'] \n",
+    "    for i in text:\n",
+    "        if i in lista:\n",
+    "            text = text.replace(i,\"\")\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funcao para transformar as palavras abreviadas em seus padroes + deletar palavras sem valor\n",
+    "\n",
+    "def limpandinho(text):\n",
+    "    dicio = {\"não\": [\"n\",\"nn\",\"nao\",\"nnn\"], \n",
+    "             \"sim\": [\"ss\",\"s\",\"sss\",\"siim\"], \n",
+    "             \"porque\": [\"pq\",\"motivo\"],\n",
+    "             \"muito\": [\"mt\"],\n",
+    "             \"tudo\": [\"td\",\"todo\"]\n",
+    "            }\n",
+    "\n",
+    "    valores=[]\n",
+    "    for lista in dicio.values():\n",
+    "        for elemento in lista:\n",
+    "            valores.append(elemento)\n",
+    "\n",
+    "    nova_frase=[]\n",
+    "    l_palavras = text.split()   \n",
+    "    for palavra in l_palavras:\n",
+    "        if palavra in valores:\n",
+    "            for l_dicio in dicio.values():\n",
+    "                if palavra in l_dicio:\n",
+    "                    nova_frase.append(list(dicio.keys())[list(dicio.values()).index(l_dicio)])\n",
+    "                    \n",
+    "        elif palavra[:2] == \"kk\":\n",
+    "            palavra = \"kkk\"\n",
+    "            nova_frase.append(palavra)\n",
+    "            \n",
+    "        elif palavra[0] == \"@\":\n",
+    "            pass\n",
+    "        elif palavra[:4] == \"http\":\n",
+    "            pass\n",
+    "        elif palavra in [\"a\",\"o\",\"de\",\"e\",\"era\",\"em\",\"que\",\"q\",\"oq\"]:\n",
+    "            pass\n",
+    "        \n",
+    "        else:\n",
+    "            nova_frase.append(palavra)\n",
+    "    return \" \".join(nova_frase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 470,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,18 +521,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___\n",
-    "### Verificando a performance do Classificador\n",
-    "\n",
-    "Agora você deve testar o seu classificador com a base de Testes."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,14 +544,14 @@
     "\n",
     "data = {'Tweet':  [],\n",
     "        'Classificação': [],\n",
-    "    }\n",
+    "        }\n",
     "\n",
     "novo = pd.DataFrame(data, columns = ['Tweet','Classificação'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 476,
    "metadata": {
     "scrolled": false
    },
@@ -425,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,135 +611,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Para comparar"
+    "___\n",
+    "### Verificando a performance do Classificador\n",
+    "\n",
+    "Agora você deve testar o seu classificador com a base de Testes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 478,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Teste</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Classificação</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Irrelevante</th>\n",
-       "      <td>142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Relevante</th>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Teste\n",
-       "Classificação       \n",
-       "Irrelevante      142\n",
-       "Relevante         58"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test.groupby(['Classificação']).count()"
+    "vp = 0\n",
+    "fp = 0\n",
+    "vn = 0\n",
+    "fn = 0\n",
+    "\n",
+    "novo[\"Performance\"] = \"nada\"\n",
+    "\n",
+    "for i in range(len(novo)):\n",
+    "    if novo.iloc[i, 1] == test.iloc[i,1]:\n",
+    "        if novo.iloc[i, 1] == \"Relevante\":\n",
+    "            vp+=1\n",
+    "            novo.iloc[i, 2]=\"VP\"\n",
+    "        else:\n",
+    "            vn+=1\n",
+    "            novo.iloc[i, 2]=\"VN\"\n",
+    "    elif novo.iloc[i, 1] != test.iloc[i,1]:\n",
+    "        if novo.iloc[i, 1] == \"Relevante\":\n",
+    "            fp+=1\n",
+    "            novo.iloc[i, 2]=\"FP\"\n",
+    "        else:\n",
+    "            fn+=1\n",
+    "            novo.iloc[i, 2]=\"FN\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 507,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tweet</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Classificação</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Irrelevante</th>\n",
-       "      <td>138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Relevante</th>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Tweet\n",
-       "Classificação       \n",
-       "Irrelevante      138\n",
-       "Relevante         62"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Porcentagem de verdadeiros positivos: 15.0\n",
+      "Porcentagem de falsos positivos: 14.5\n",
+      "Porcentagem de verdadeiros negativos: 56.5\n",
+      "Porcentagem de falsos negativos: 14.0\n"
+     ]
     }
    ],
    "source": [
-    "novo.groupby(['Classificação']).count()"
+    "P = novo.loc[:,[\"Performance\"]].value_counts(normalize=True).round(4)*100\n",
+    "vp = P[\"VP\"]\n",
+    "fp = P[\"FP\"]\n",
+    "vn = P[\"VN\"]\n",
+    "fn = P[\"FN\"]\n",
+    "print(f\"Porcentagem de verdadeiros positivos: {vp:.1f}\")\n",
+    "print(f\"Porcentagem de falsos positivos: {fp:.1f}\")\n",
+    "print(f\"Porcentagem de verdadeiros negativos: {vn:.1f}\")\n",
+    "print(f\"Porcentagem de falsos negativos: {fn:.1f}\")"
    ]
   },
   {
