--- a/Projeto1_Layout_Classificador.ipynb
+++ b/Projeto1_Layout_Classificador.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
-    "import re "
+    "import re \n",
+    "from unicodedata import normalize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "4                    vontade de uma pringles ughhhhh   Irrelevante"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -221,110 +222,20 @@
        "      <td>ai to muito puta namoral ja era a minha coca c...</td>\n",
        "      <td>Relevante</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>parece que os pringles que eu gosto não são ma...</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>inexplicável o tanto que a stax pisa na pringles</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>tem umas foto de ontem q eu to segurando uma l...</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>@marcuseduardop1 kkkkkkk só o caderno msm, que...</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>@_mfitas_ na receita das pringles a batata dev...</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>a minha mae: queres que faça uma tarte de fran...</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>@emersoncruzm @jokacn @luizcrvg5 @aubrey7l @aq...</td>\n",
-       "      <td>Relevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>fui ao mercado daqui e fiquei 😲 pq a pringles ...</td>\n",
-       "      <td>Relevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>@hi_pringles for regular album? 🤩🤩🤩</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>incrível que eu taco o fodase pra coisa doce l...</td>\n",
-       "      <td>Relevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>@cmlndrd ontem eu andei levantei minha bunda 2...</td>\n",
-       "      <td>Relevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>kkkkkkkkkkkkkk os cara fazem pure de batata co...</td>\n",
-       "      <td>Relevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>minha festa seria da @pringles</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>meus planos eram: assistir dorama, comer minha...</td>\n",
-       "      <td>Irrelevante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>pringles é ruim</td>\n",
-       "      <td>Relevante</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                Teste Classificação\n",
-       "0   o cara tem um pote de pringles entre as perna ...   Irrelevante\n",
-       "1   @ellixquintx a pringles de cebola maior que ca...   Irrelevante\n",
-       "2   se eu fosse líder eu n ia falar com a pessoa q...     Relevante\n",
-       "3   vou fazer meu vício favorito dos últimos tempo...     Relevante\n",
-       "4   ai to muito puta namoral ja era a minha coca c...     Relevante\n",
-       "5   parece que os pringles que eu gosto não são ma...   Irrelevante\n",
-       "6    inexplicável o tanto que a stax pisa na pringles   Irrelevante\n",
-       "7   tem umas foto de ontem q eu to segurando uma l...   Irrelevante\n",
-       "8   @marcuseduardop1 kkkkkkk só o caderno msm, que...   Irrelevante\n",
-       "9   @_mfitas_ na receita das pringles a batata dev...   Irrelevante\n",
-       "10  a minha mae: queres que faça uma tarte de fran...   Irrelevante\n",
-       "11  @emersoncruzm @jokacn @luizcrvg5 @aubrey7l @aq...     Relevante\n",
-       "12  fui ao mercado daqui e fiquei 😲 pq a pringles ...     Relevante\n",
-       "13                @hi_pringles for regular album? 🤩🤩🤩   Irrelevante\n",
-       "14  incrível que eu taco o fodase pra coisa doce l...     Relevante\n",
-       "15  @cmlndrd ontem eu andei levantei minha bunda 2...     Relevante\n",
-       "16  kkkkkkkkkkkkkk os cara fazem pure de batata co...     Relevante\n",
-       "17                     minha festa seria da @pringles   Irrelevante\n",
-       "18  meus planos eram: assistir dorama, comer minha...   Irrelevante\n",
-       "19                                    pringles é ruim     Relevante"
+       "                                               Teste Classificação\n",
+       "0  o cara tem um pote de pringles entre as perna ...   Irrelevante\n",
+       "1  @ellixquintx a pringles de cebola maior que ca...   Irrelevante\n",
+       "2  se eu fosse líder eu n ia falar com a pessoa q...     Relevante\n",
+       "3  vou fazer meu vício favorito dos últimos tempo...     Relevante\n",
+       "4  ai to muito puta namoral ja era a minha coca c...     Relevante"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,12 +293,12 @@
     "    punctuation = '[|/!-.:?;¿,)(\"]'\n",
     "    pattern = re.compile(punctuation)\n",
     "    text_subbed = re.sub(pattern, '', text)\n",
-    "    return limpandinho(limpa_aspas(text_subbed))"
+    "    return remover_acentos(limpandinho(limpa_aspas(text_subbed)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remover acentos\n",
+    "\n",
+    "def remover_acentos(txt):    \n",
+    "    return normalize('NFKD', txt).encode('ASCII', 'ignore').decode('ASCII')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -565,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -651,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 51,
    "metadata": {
     "scrolled": false
    },
@@ -660,10 +583,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Porcentagem de verdadeiros positivos: 15.0\n",
-      "Porcentagem de falsos positivos: 14.5\n",
-      "Porcentagem de verdadeiros negativos: 56.5\n",
-      "Porcentagem de falsos negativos: 14.0\n"
+      "Porcentagem de verdadeiros positivos: 14.0\n",
+      "Porcentagem de falsos positivos: 16.5\n",
+      "Porcentagem de verdadeiros negativos: 54.5\n",
+      "Porcentagem de falsos negativos: 15.0\n"
      ]
     }
    ],
@@ -686,13 +609,6 @@
     "___\n",
     "### Concluindo"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
